# bitrl

./: .clang-format  CMakeLists.txt  README.md  config.h.in  format.sh  md_README.html  version.h.in
.github/workflows/: build.yml  build_docs.yml
doc/: CMakeLists.txt  Doxyfile.in  index.md
doc/docs/: acrobot__env_8cpp.html  acrobot__env_8h__incl.md5  acrobot__vec__env_8cpp__incl.map  acrobot__vec__env_8cpp__incl.md5  acrobot__vec__env_8h__dep__incl.map  acrobot__vec__env_8h__incl.map  acrobot__vec__env_8h__incl.md5  apiserver_8cpp__incl.md5  apiserver_8h_source.html  arduino__connector__base_8h__dep__incl.map  arduino__connector__base_8h__incl.md5  arduino__connector__usb__base_8cpp__incl.md5  arduino__connector__usb__base_8h.html  arduino__connector__usb__base_8h__dep__incl.md5  arduino__connector__usb__base_8h__incl.map  arduino__connector__wifi__base_8cpp__incl.md5  arduino__connector__wifi__base_8h__dep__incl.map  arduino__connector__wifi__base_8h__dep__incl.md5  arduino__connector__wifi__base_8h_source.html  bernoulli__dist_8cpp.html  bernoulli__dist_8cpp__incl.map  bernoulli__dist_8cpp__incl.md5  bernoulli__dist_8h.html  bernoulli__dist_8h__dep__incl.map  bernoulli__dist_8h__dep__incl.md5  bernoulli__dist_8h__incl.md5  bernoulli__dist_8h_source.html  beta__dist_8h.html  beta__dist_8h_source.html  bicycle__vehicle__model__dynamics_8cpp.html  bicycle__vehicle__model__dynamics_8cpp__incl.map  bicycle__vehicle__model__dynamics_8h.html  bicycle__vehicle__model__dynamics_8h__incl.map  bitrl__config_8h__dep__incl.md5  bitrl__config_8h_source.html  bitrl__consts_8h.html  bitrl__consts_8h__incl.map  bitrl__consts_8h_source.html  bitrl__types_8h.html  bitrl__types_8h__incl.map  (+677 more)
doc/docs/search/: all_0.js  all_13.js  all_14.js  all_16.js  all_2.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_11.js  classes_15.js  classes_2.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  classes_e.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_12.js  enumvalues_13.js  enumvalues_3.js  enumvalues_9.js  enumvalues_f.js  files_0.js  files_10.js  files_12.js  files_13.js  files_2.js  files_4.js  files_5.js  (+42 more)
docs/: acrobot__env_8cpp.html  acrobot__env_8cpp__incl.map  acrobot__env_8cpp__incl.md5  acrobot__env_8h.html  acrobot__env_8h__dep__incl.map  acrobot__env_8h__dep__incl.md5  acrobot__env_8h__incl.map  acrobot__env_8h__incl.md5  acrobot__env_8h_source.html  acrobot__vec__env_8cpp.html  acrobot__vec__env_8cpp__incl.map  acrobot__vec__env_8cpp__incl.md5  acrobot__vec__env_8h.html  acrobot__vec__env_8h__dep__incl.md5  acrobot__vec__env_8h__incl.map  acrobot__vec__env_8h__incl.md5  acrobot__vec__env_8h_source.html  annotated.html  apiserver_8cpp.html  apiserver_8cpp__incl.map  apiserver_8h.html  apiserver_8h__dep__incl.map  apiserver_8h__dep__incl.md5  apiserver_8h__incl.map  apiserver_8h__incl.md5  arduino__connector__base_8h.html  arduino__connector__base_8h__dep__incl.md5  arduino__connector__base_8h__incl.map  arduino__connector__base_8h__incl.md5  arduino__connector__base_8h_source.html  arduino__connector__usb__base_8cpp.html  arduino__connector__usb__base_8cpp__incl.map  arduino__connector__usb__base_8cpp__incl.md5  arduino__connector__usb__base_8h.html  arduino__connector__usb__base_8h__dep__incl.map  arduino__connector__usb__base_8h__incl.map  arduino__connector__usb__base_8h__incl.md5  arduino__connector__usb__base_8h_source.html  arduino__connector__wifi__base_8cpp.html  arduino__connector__wifi__base_8cpp__incl.map  (+1266 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  (+138 more)
examples/: CMakeLists.txt
examples/arduino/: CMakeLists.txt  arduino_example.cpp
examples/arduino_wifi/: CMakeLists.txt  arduino_wifi_example.cpp
examples/box2d/: CMakeLists.txt  box2d_example.cpp
examples/chrono_examples/chrono_exe_1/: CMakeLists.txt  chrono_exe_1.cpp
examples/example_1/: CMakeLists.txt  example_1.cpp  example_1.md
examples/example_10/: CMakeLists.txt  example_10.cpp
examples/example_11/: CMakeLists.txt  example_11.cpp  example_11.md
examples/example_12/: CMakeLists.txt  example_12.cpp  example_12.md
examples/example_13/: CMakeLists.txt  example_13.cpp  example_13.md  robot.h  robot_env.h
examples/example_14/: CMakeLists.txt  example_14.cpp  example_14.md
examples/example_15/: CMakeLists.txt
examples/example_16/: CMakeLists.txt  example_16.cpp
examples/example_17/: CMakeLists.txt  mqtt_example_1.cpp  plot.py
examples/example_18/: CMakeLists.txt  mqtt_example_2.cpp
examples/example_19/: CMakeLists.txt  mqtt_example_3.cpp
examples/example_2/: CMakeLists.txt  example_2.cpp  example_2.md
examples/example_20/: CMakeLists.txt  example_20.cpp  feed.py
examples/example_21/: CMakeLists.txt  example_21.cpp  example_21.md
examples/example_22/: CMakeLists.txt  example_22.cpp  example_22.md
examples/example_3/: CMakeLists.txt  example_3.cpp  example_3.md
examples/example_4/: CMakeLists.txt  example_4.cpp  example_4.md
examples/example_5/: CMakeLists.txt  example_5.cpp
examples/example_6/: CMakeLists.txt  example_6.cpp
examples/example_7/: CMakeLists.txt  example_7.cpp
examples/example_8/: CMakeLists.txt  example_8.cpp
examples/example_9/: CMakeLists.txt  example_9.cpp
examples/mqtt/: CMakeLists.txt  camera_feed.py  extended_kalman_filter.py  mqtt_example.cpp  mqtt_example_1.cpp
examples/mqtt_exe_1/: CMakeLists.txt  extended_kalman_filter.py  mqtt_example_1.cpp
examples/mqtt_exe_2/: CMakeLists.txt  mqtt_example_2.cpp
examples/mqtt_exe_3/: CMakeLists.txt  mqtt_example_3.cpp
robots/: bitrl_diff_drive_robot.json
sensors/: ultrasonic_chrono_backend.json
worlds/: chrono_world_1.json
(+248 files in other folders)
