CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR}) 
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
#INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True) 
SET(CMAKE_LINKER_FLAGS "-pthread")

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
	SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
	SET(CMAKE_CXX_FLAGS "-O2")
ENDIF()

# use the Boost link directories
LINK_DIRECTORIES(${Boost_LIBRARY_DIR})
LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX})

# add optional includes according to config
IF(BITRL_WEBOTS)
	INCLUDE_DIRECTORIES(${WEBOTS_INCLUDE_DIRS})
	LINK_DIRECTORIES(${WEBOTS_LIB_DIRS})
ENDIF()

ADD_SUBDIRECTORY(example_1)
ADD_SUBDIRECTORY(example_2)
ADD_SUBDIRECTORY(example_3)
ADD_SUBDIRECTORY(example_4)
ADD_SUBDIRECTORY(example_5)
ADD_SUBDIRECTORY(example_7)
ADD_SUBDIRECTORY(example_8)
ADD_SUBDIRECTORY(example_9)
ADD_SUBDIRECTORY(example_10)
ADD_SUBDIRECTORY(example_11)
ADD_SUBDIRECTORY(example_12)
ADD_SUBDIRECTORY(example_14)
ADD_SUBDIRECTORY(example_15)
ADD_SUBDIRECTORY(example_16)

IF(BITRL_MQTT)
    ADD_SUBDIRECTORY(example_17)
	ADD_SUBDIRECTORY(example_20)

	# Need both OpenCV and MQTT
	IF(BITRL_OPENCV)
		ADD_SUBDIRECTORY(example_18)
	ENDIF ()
ENDIF()

IF(BITRL_CHRONO)
	ADD_SUBDIRECTORY(example_19)
ENDIF ()


IF(BITRL_WEBOTS)
	ADD_SUBDIRECTORY(webots/world_1)
ENDIF()
