cmake_minimum_required(VERSION 3.6 FATAL_ERROR)

SET(EXECUTABLE  example_12)
SET(SOURCE ${EXECUTABLE}.cpp)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})
TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE bitrllib)

IF(BITRL_CHRONO)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE ${BITRL_CHRONO_TARGETS})
ENDIF ()

IF(BITRL_WEBOTS)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} CppController)
ENDIF()

IF(BITRL_MQTT)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE bitrllib paho-mqttpp3 paho-mqtt3as)
ENDIF ()

IF(BITRL_OPENCV)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE ${OpenCV_LIBS})
ENDIF ()
