CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

SET(EXECUTABLE  example_16)
SET(SOURCE ${EXECUTABLE}.cpp)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE bitrllib pthread  boost_log)

IF(ENABLE_CHRONO)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE Chrono::Chrono_core)
ENDIF ()

IF(BITRL_WEBOTS)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} CppController)
ENDIF()

IF(BITRL_MQTT)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE paho-mqttpp3 paho-mqtt3as)
ENDIF ()

IF(BITRL_OPENCV)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE ${OpenCV_LIBS})
ENDIF ()
