CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

SET(SOURCE example_3.cpp)
SET(EXECUTABLE  example_3)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})
TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE bitrllib)

IF(BITRL_CHRONO)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE ${BITRL_CHRONO_TARGETS})
ENDIF ()

IF(BITRL_WEBOTS)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} CppController)
ENDIF()

IF(BITRL_MQTT)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE bitrllib paho-mqttpp3 paho-mqtt3as)
ENDIF ()

IF(BITRL_OPENCV)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE ${OpenCV_LIBS})
ENDIF ()