cmake_minimum_required(VERSION 3.20 FATAL_ERROR)

SET(EXECUTABLE  chrono_exe_1)
SET(SOURCE ${EXECUTABLE}.cpp)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_COMPILE_DEFINITIONS(${EXECUTABLE} PRIVATE "CHRONO_DATA_DIR=\"${CHRONO_DATA_DIR}\"") 
TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE bitrllib ${BITRL_CHRONO_TARGETS})

